# parallelism-theory

./: README.md
task1/: CMakeLists.txt  Makefile  README.md
task1/src/: main.cpp
task2/: Makefile  task1.c  task2.c  task3_each_section  task3_metod_1.cpp  task3_metod_2.cpp
task3/task1/: Makefile  benchmark.py  task1.cpp
task3/task2/: CMakeLists.txt  benchmark.py  main.cpp  requirements.txt  run_benchmark.sh
task3/task2/client/: client.h  client.tpp
task3/task2/functions/: functions.h
task3/task2/server/: server.h  server.tpp
task4/: all_classes.py  main.py
task5/: all_classes.py  benchmark.py  logging_settings.py  main.py  utils.py
task6/: Makefile  cpu.cpp  gpu.cpp
task7/: Makefile
task8/: Makefile
